# design_software-usm-year03

./: .gitignore  README.md
field_mask/src/: Main.java
lab01/src/: Employee.java  EmployeeBitMask.java  EmployeeRepository.java  EmployeeUtils.java  Main.java
lab01/src/mask/: EmployeeBitMask.java  EmployeeBoolFieldMask.java
lab01/src/model/: Employee.java  Role.java
lab01/src/repository/: EmployeeRepository.java
lab01/src/util/: EmployeeUtils.java
lab02/: Makefile  context.py  functions.py  main.py  models.py  pipeline.py  pyproject.toml  steps.py
lab02/pipeline_pkg/: __init__.py  __main__.py  context.py  functions.py  models.py  pipeline.py  steps.py
lab02/tests/: test_pipeline.py
lab03/: notes  readme.md
lab03/builder/: __main__.py  course_builder.py  model_builder.py  model_immutable.py  model_mutable.py  models_immutable.py  models_mutable.py  validation_utils.py
lab04/: client_a.py  client_b.py  context.py  project.py  readme.md
lab05/: readme.md
lab05/src/: sample_students.json
lab05/src/student_pipeline/: __init__.py  container.py  domain.py  main.py  pipeline.py  readers.py  transforms.py  writers.py
src/: EmployeeBoolFieldMask.java  Main.java  Role.java
