[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.0.1"
description = "example of pipeline design in python"
readme = "readme.md"
requires-python = ">=3.12"
authors = [{name = "Artur", email = "example@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/slendchat/design_software-usm-year03" 

[tool.setuptools.packages.find]
where = ["pipeline_pkg"]

[project.scripts]
pipeline = "pipeline_pkg.main:main"